# perception

./: .coveragerc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.txt  conanfile.py  setup.py
.github/workflows/: documentation.yml
Calib3D/: Camera.hpp
Core/: SE3.hpp  SO3.hpp
Data/: README.md
PTK/Calib3D/: Calib3D.hpp  Camera.hpp
PTK/Collision/: AABB.hpp  Collision.hpp
PTK/Core/: Core.hpp  SE3.hpp  SO2.hpp  SO3.hpp
PTK/Shape3D/: Capsule.hpp  Cone.hpp  Plane.hpp  Point.hpp  Shape3D.hpp  Sphere.hpp
PTK/Voxel3D/: Voxel3D.hpp  ptkVoxel3D.hpp
Render/: Render.hpp  ShapeRender.hpp  VoxelRender.hpp
Shape3D/: Box.hpp  Cone.hpp  Cylinder.hpp  Line.hpp  Plane.hpp  ShapeBase.hpp  Sphere.hpp  Triangle.hpp
Testing/: CMakeLists.txt  main.cpp  testcimg.cpp
cmake/: External-Eigen.cmake  External-OpenCV.cmake
cmake/modules/: External-OpenCV.cmake  External-VTK.cmake
data/: README.md
docs/: Doxyfile  README.md  index.md
example/: main.py  view_shape.py
exemples/: main.cc
include/: Camera.hpp  Depth.hpp  Math.h  Scene.hpp  Utils.h  callbk.cpp  callbk.hpp  camera.hpp  control.cpp  control.hpp  depth.hpp  display.hpp  feature.hpp  global.cpp  global.hpp  math.h  pclproc.hpp  plot.hpp  preproc.hpp  user_config.h.in  utils.cpp  utils.h  utils.hpp  view.cpp  view.hpp
model/: scene.xml  ur5e.xml
robotic-perception/: get_line_by_2pts.py  vtk_test.py
robotic_perception/: README.md  vtk_test.py
robotic_perception/calibration/: camera.py
robotic_perception/transform/: __init__.py  rotation.py
robotic_perception/utilities/: __init__.py  geometry.py  load_points.py  read_off_file.py
rpl/: CMakeLists.txt
rpl/Voxel3D/: Voxel3D.hpp
rpl/calib3d/: calib3d.hpp  camera.hpp
rpl/calibration/: camera.h  camera.hpp
rpl/common/: common.h  screw.h
rpl/core/: SE2.hpp  SE3.hpp  SO2.hpp  SO3.hpp  core.hpp
rpl/geometry/: Line.hpp  Point.hpp  SE3.hpp  SO3.hpp  Screw.hpp  line.h  point.h  sphere.h
rpl/reconstruction/: Line.hpp  line.h  reconstruction.h  reconstruction.hpp
rpl/shape3d/: Shape3D.hpp  capsule.hpp  line.hpp  point.hpp  shape.hpp  sphere.hpp  voxel.hpp
rpl/transform/: SIM3.h  SO3.h  rotation.hpp  transform.hpp
rpl/visualization/: main.cpp  visualization.cpp  visualization.h
src/: AlignedBoxes.hpp  AlignedTriangles.hpp  CMakeLists.txt  Camera.cpp  Collision.hpp  Plane.hpp  Point.hpp  SE2.hpp  Shape3D.hpp  Sphere.hpp  Triangle.hpp  main.cpp  test.cpp  testpclvtk.cpp  ur5e.cpp
src/calibration/: calibration.hpp  camera.hpp
src/geometry/: BoxXd.hpp  Line.hpp  LineXd.hpp  Point.hpp  PointXd.hpp  SO3.hpp  Screw.hpp  SphereXd.hpp  geometry.hpp
src/transform/: rotation.hpp
test/: CMakeLists.txt  shape3d.cpp  testopencv.cpp  testvtk.cpp
tests/: CMakeLists.txt  main.cpp  testCamera.cpp  testDisplay.cpp  testFeature.cpp  testPreproc.cpp  test_bar.cc  testnorm.cpp
tmp/: ur5e.txt
